--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   },
   "dependencies": {
     "shortid": "^2.2.14",
-    "tslib": "^1.9.3",
+    "tslib": "^1.10.0",
     "uuid": "^3.3.2",
     "uuid-validate": "0.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.11",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.2",
     "@types/shortid": "0.0.29",
-    "@types/uuid": "^3.4.4",
-    "@types/uuid-validate": "0.0.0",
-    "jest": "^23.6.0",
-    "prettier": "^1.15.3",
-    "prettier-standard": "8.0.1",
-    "ts-jest": "^23.10.5",
-    "tslint": "5.11.0",
-    "tslint-config-security": "^1.13.0",
-    "typescript": "^3.2.1"
+    "@types/uuid": "^3.4.5",
+    "@types/uuid-validate": "0.0.1",
+    "jest": "^24.8.0",
+    "prettier": "^1.18.2",
+    "prettier-standard": "^9.1.1",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.18.0",
+    "tslint-config-security": "^1.16.0",
+    "typescript": "^3.5.3"
   },
   "repository": {
     "type": "git",
